--- a/targets/common/license.html
+++ b/targets/common/license.html
@@ -1,5 +1,6 @@
+
 <!--
-Sugarcane 1.2.1 is based on:
+Based on:
 
 TiddlyWiki 1.2.39 by Jeremy Ruston, (jeremy [at] osmosoft [dot] com)
 
@@ -32,3 +33,4 @@ CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING 
 ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
 DAMAGE.
 -->
+
