Adding template and comments
Adding another templated variable and changing the readme.

--- a/targets/sugarcane/template.html
+++ b/targets/sugarcane/template.html
@@ -4,10 +4,10 @@
 <head>
   <!-- Sugarcane 1.2.1 -->
 
-<!-- This file was created with Twee -->
+<!-- This file was created with <%TWEE:::ENGINE%>. -->
 <%TWEE:::LICENSE%>
 
-<title>Your Twee Story</title>
+<title>Your <%TWEE:::ENGINE%> Story</title>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8">
 <!-- insert additional HTML header lines here, such as links to external CSS files -->
 
@@ -26,7 +26,7 @@ body{background-color:#000;color:#fff;font-family:Verdana,sans-serif;font-size:6
 <li id="restart">Restart</li>
 <li id="share">Share</li>
 <li id="credits">
-This story was created with <a href="http://gimcrackd.com/etc/src/">Twine</a> and is powered by <a href="http://tiddlywiki.com/">TiddlyWiki</a>
+This story was created with <a href="http://gimcrackd.com/etc/src/"><%TWEE:::ENGINE%></a> and is powered by <a href="http://tiddlywiki.com/">TiddlyWiki</a>
 </li>
 </ul>
 <div id="snapbackMenu" class="menu"></div>
@@ -41,8 +41,6 @@ This story was created with <a href="http://gimcrackd.com/etc/src/">Twine</a> an
 
 <%TWEE:::PASSAGES%>
 <%TWEE:::TIDDLERS%>
-
-<!-- insert HTML footer content here, such as a copyright notice or navbar -->
 
 </body>
 </html>
