--- a/targets/local/template.html
+++ b/targets/local/template.html
@@ -2,10 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<!-- This file was created with Twee -->
+<!-- This file was created with <%TWEE:::ENGINE%>. -->
 <%TWEE:::LICENSE%>
 
-<title>Your Twee Story</title>
+<title>Your <%TWEE:::ENGINE%> Story</title>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8">
 <!-- insert additional HTML header lines here, such as links to external CSS files -->
 
