--- a/targets/mobile/template.html
+++ b/targets/mobile/template.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html>
 <head>
-<!-- This file was created with Twee -->
+<!-- This file was created with <%TWEE:::ENGINE%>. -->
 <%TWEE:::LICENSE%>
 
 <!-- iOS -->
@@ -24,7 +24,7 @@
 <!-- /jQM -->
 
 
-<title>Your Twee Story</title>
+<title>Your <%TWEE:::ENGINE%> Story</title>
 <meta http-equiv="Content-Type" content="text/xhtml; charset=UTF-8">
 
 <%TWEE:::SCRIPT%>
